# rmvision_ws_Hero

./: .gitignore  README.md
Camera/Data/: 041052120039.mvdat  043041420086.mvdat  043052620268.mvdat
install/: local_setup.sh  setup.sh
log/: latest_build
src/armor_creater/: CMakeLists.txt
src/armor_creater/config/: creater_params.yaml
src/armor_creater/src/: creater_node.cpp  robot_simulation.cpp
src/armor_detector/: CMakeLists.txt
src/armor_detector/include/armor_detector/: armor.hpp  ba_solver.hpp  detector.hpp  detector_node.hpp  number_classifier.hpp  openvino_pose_inference.hpp  pnp_solver.hpp  utils.hpp
src/armor_detector/model/: best.onnx  lenet5_gray_32x32.onnx  lenet5_threshold_32x32_20240326_2.onnx  lenet5_threshold_32x32_20240327.onnx  lenet5_threshold_32x32_20240721.onnx  lenet5_threshold_32x32_20240728.onnx  lenet5_threshold_32x32_20240731.onnx
src/armor_detector/model/20250310/: best.xml  metadata.yaml
src/armor_detector/model/20250422/: metadata.yaml
src/armor_detector/model/20250505/: metadata.yaml
src/armor_detector/model/20250512/: best.xml  metadata.yaml
src/armor_detector/model/250325/: metadata.yaml
src/armor_detector/model/best_openvino_model/: best.xml  metadata.yaml
src/armor_detector/model/best_openvino_model_batch/: best.xml  metadata.yaml
src/armor_detector/model/best_openvino_model_half/: best.xml  metadata.yaml
src/armor_detector/src/: ba_solver.cpp  detector.cpp  detector_node.cpp  graph_optimizer.cpp  light_corner_corrector.cpp  number_classifier.cpp  openvino_pose_inference.cpp  pnp_solver.cpp  utils.cpp
src/armor_detector/test/: test_number_cls.cpp
src/armor_tracker/docs/: jacobi_infer.ipynb
src/armor_tracker/src/: common_tracker.cpp  extended_kalman_filter.cpp  solve_trajectory.cpp  tracker.cpp  tracker_node.cpp
src/auto_aim_interfaces/: CMakeLists.txt
src/base_detector/: CMakeLists.txt
src/base_detector/src/: base.cpp  base_node.cpp
src/base_detector/test/: test_node_startup.cpp
src/hik_camera/: CMakeLists.txt  package.xml
src/hik_camera/config/: camera_info_a.yaml  camera_info_b.yaml
src/hik_camera/launch/: hik_camera.launch.py
src/hik_camera/src/: hik_camera_node.cpp  hik_camera_node_A.cpp  hik_camera_node_B.cpp
src/mindvision_camera/: CMakeLists.txt
src/mindvision_camera/config/: camera_info.yaml  camera_params.yaml
src/mindvision_camera/src/: mv_camera_node.cpp
src/rm_gimbal_description/urdf/: rm_gimbal.urdf.xacro
src/serial_driver/include/: protocol.h
src/serial_driver/src/: serial_driver_node.cpp
src/unity_transform/: CMakeLists.txt
(+237 files in other folders)
